--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,12 @@
 body {
   font-family: 'Roboto', sans-serif;
 }
+
+a {
+  color: #67b9be;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
