--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p class="footer-text">Made by <a target="_blank" href="https://www.linkedin.com/in/kistasi/">kistasi</a> for <a target="_blank" href="https://www.genesys.com/">Genesys</a> in late 2023.</p>
+<footer class="header-and-footer">
+  <span>
+    Made by <a target="_blank" href="https://www.linkedin.com/in/kistasi/">kistasi</a> for <a target="_blank" href="https://www.genesys.com/">Genesys</a> in late 2023.
+  </span>
+</footer>
