Add more data to the story component

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="header-and-footer">
+<footer class="layout-element">
   <span>
     Made by <a target="_blank" href="https://www.linkedin.com/in/kistasi/">kistasi</a> for <a target="_blank" href="https://www.genesys.com/">Genesys</a> in late 2023.
   </span>
