--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@ a:hover {
   text-decoration: underline;
 }
 
-.header-and-footer {
+.layout-element{
   background: #4834d4ed;
   color: #dff9fb;
   text-align: center;
