Add indexes to stories, use semantic html

--- a/src/app/pages/stories/stories.component.html
+++ b/src/app/pages/stories/stories.component.html
@@ -1,10 +1,11 @@
-<div>
+<main>
   <app-story
     *ngFor="let story of topStories"
+    [index]="story.index"
     [url]="story.url"
     [title]="story.title"
     [author]="story.by"
     [score]="story.score"
     [time]="story.time">
   </app-story>
-</div>
+</main>
