--- a/src/app/components/story/story.component.html
+++ b/src/app/components/story/story.component.html
@@ -1,8 +1,8 @@
-<div class="story">
-  <a [href]="url" target="_blank">{{ title }}</a>
+<article class="story">
+  <a [href]="url" target="_blank">{{ titleWithIndex }}</a>
   <span class="meta">
     by <a class="author-link"[href]="authorLink" target="_blank">{{ author }}</a>
     | {{ score }} points
     | {{ time | relativeTime }}
   </span>
-</div>
+</article>
