--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,7 @@
 <footer class="layout-element">
-  Made by <a target="_blank" href="https://www.linkedin.com/in/kistasi/">kistasi</a> for <a target="_blank" href="https://www.genesys.com/">Genesys</a> in late 2023.
+  Made by
+  <a target="_blank" href="https://www.linkedin.com/in/kistasi/">kistasi</a>
+  for
+  <a target="_blank" href="https://www.genesys.com/">Genesys</a>
+  in late 2023.
 </footer>
