--- a/src/app/components/story/story.component.css
+++ b/src/app/components/story/story.component.css
@@ -1,8 +1,9 @@
 .story {
   background: var(--secondary-layout-color);
-  margin: 2em;
+  margin: 2em auto;
   padding: 1em;
   border-radius: 8px;
+  max-width: 700px;
 }
 
 .story a {
